# toolbox

./: README.md
calib/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
calib/src/calib/: __init__.py  __main__.py  app.py
calib/src/calib/config/: __init__.py  app_config.py  defaults.yaml
calib/src/calib/core/: __init__.py  session.py
calib/src/calib/core/acquisition/: __init__.py  base.py  coverage.py  factory.py  quality.py  simple.py
calib/src/calib/core/calibration/: __init__.py  base.py  mono.py  multi.py  stereo.py
calib/src/calib/core/camera/: __init__.py  basler_camera.py  factory.py  interface.py  uvc_camera.py
calib/src/calib/core/export/: __init__.py  json_exporter.py  yaml_exporter.py
calib/src/calib/core/models/: __init__.py  calibration_result.py
calib/src/calib/core/pattern/: __init__.py  aruco_dictionaries.py  base.py  charuco.py  chessboard.py  circle_grid.py  factory.py
calib/src/calib/ui/: __init__.py  calibration_panel.py  camera_panel.py  main_window.py  pattern_selector.py
calib/src/calib/ui/widgets/: __init__.py  error_chart.py  image_viewer.py
calib/src/calib/worker/: __init__.py  acquisition_worker.py  calibration_worker.py  camera_worker.py
calib/tests/: __init__.py  test_acquisition_factory.py  test_calibration.py  test_camera_interface.py  test_charuco.py  test_export.py  test_pattern.py
clarify/: requirements.txt  ui_click.py  ui_click.spec  ui_click_v0.py  ui_click_v1.py  ui_click_v2.py  ui_click_v3.py  video_clarify.py  video_push.py  video_push_left2right.py
tools/: gen_png.py
